# kompost

./: .gitignore  .ignore  Cargo.toml  Readme.md  codebook.toml  crates.js  help.html  license.txt  meetup.md  settings.html  src-files.js
.github/workflows/: deploy.yaml
anonymous/: trait.AnonymouslyIterable.html
composed/: struct.ComposedIterator.html
compounds/: fn.periodic_windows.html
examples/: w2.rs
kompost/: all.html  index.html  sidebar-items.js
kompost/anonymous/: index.html  sidebar-items.js  struct.AnonymousIterator.html  trait.Anonymous.html  trait.AnonymouslyIterable.html
kompost/composed/: index.html  sidebar-items.js  struct.ComposedIterator.html  trait.Composed.html  trait.ComposedIterable.html
kompost/composite/: fn.circular_windows.html  fn.circular_windows_2d.html  fn.circular_windows_2d_slice.html  fn.transpose.html  fn.transpose_slice.html  index.html
kompost/compounds/: fn.circular_windows.html  fn.circular_windows_2d.html  fn.circular_windows_2d_slice.html  fn.periodic_windows.html  fn.transpose.html  fn.transpose_slice.html  index.html  sidebar-items.js
search.index/: 14f2809a8fbc.js  1c5dca195357.js  2aeffeabbdcd.js  2d3b0682751d.js  3802c1fc7ebb.js  4a58de1c18dc.js  5406cb9dccf3.js  5fd168217eea.js  root.js
search.index/crateNames/: 08c83fa2119b.js
search.index/desc/: 84dcc0f79f80.js  887d482a2a3a.js  a28992181da7.js  cbf1293b968e.js  d521d85620ca.js  fc87e426105c.js
search.index/entry/: 66676c92fe36.js  6c4149fd6705.js  aa6c4f2acca9.js  f0717f36a7d5.js
src/: anonymous.rs  composed.rs  composite.rs  compounds.rs  lib.rs
(+39 files in other folders)
