[package]
name = "kompost"
version = "0.0.4"
edition = "2024"
authors = ["Stefan Ulbrich"]
description = """
A crate to easen functional programming in rust by facilitating the creating
composition of Iterator methods and anonymous Iterators—all without writing
any trait or struct, without macros or unsafe code.
"""
license = "MIT"
license-file = "license.txt"

repository = "https://github.com/StefanUlbrich/kompost"
readme = "Readme.md"

[dependencies]

[dev-dependencies]
itertools = "0.14.0"
